feat(pics): author and sort
