# api/swagger/swagger.json
@@ -8,6 +8,34 @@
     },
     "basePath": "/",
     "paths": {
+        "/api/pics": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get pictures",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pictures"
+                ],
+                "summary": "Get pictures",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/repo.Picture"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/pics/delete/{id}": {
             "delete": {
                 "security": [
@@ -113,6 +141,9 @@
         "repo.Picture": {
             "type": "object",
             "properties": {
+                "author": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
